# mipt-db-hw-2

./: Makefile  README.md  hw2.ipynb  pyproject.toml
